# retainr

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README-NATIVE.md  README.md  TROUBLESHOOTING.md  claude-code-mcp.json  claude-mcp-config.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  health-check.sh  prompt-template.md  pyproject.toml  pytest.ini  register-claude-code.sh  requirements-dev.txt  requirements-native.txt  requirements.txt  setup-claude-code.sh  setup.sh
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/actions/docker-cache/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: ci-old.yml  ci.yml  pr-checks.yml  scheduled-tests.yml  security.yml
cli/: main.py
docs/: DOCKER_OPTIMIZATION.md  claude-code-integration.md  configuration.md  development.md  mcp_architecture.md
examples/: memory1.json  memory2.json  memory3.json
mcp_server/: __init__.py  __main__.py  api.py  config.py  embeddings.py  main.py  mcp.py  models.py  standard_mcp.py  storage.py
scripts/: docker-performance.sh  lint.sh  setup-branch-protection.sh
tests/: __init__.py  conftest.py  test_e2e_workflow.py  test_mcp_protocol.py  test_native_mcp.py  test_setup_validation.py
tests/fixtures/: sample_memory.py
tests/integration/: test_api.py  test_data_integrity.py  test_error_recovery.py  test_mcp.py  test_mcp_tools_integration.py  test_standard_mcp.py
tests/performance/: test_scalability.py
tests/security/: test_input_validation.py
tests/unit/: test_config.py  test_embeddings.py  test_models.py  test_storage.py
